editei o alinhamento do texto da página contatos

--- a/contato.html
+++ b/contato.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <section id="principal">
+        <section id="principal2">
             <h1 id="titulo_contato">Contatos da Escola e Responsáveis</h1>
             <p>Instagram do Desenvolvedor: <a href="https://instagram.com/davioliveira808" target="_blank" rel="external" class="link_contato">@davioliveira808</a></p>
             <p>Instagram do Professor Ademir: <a href="https://instagram.com/professorademirr" target="_blank" rel="external" class="link_contato">@professorademirr</a></p>
