editei as imagens e adicionei ao site

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </aside>
         <aside>
             <div id="imagem">
-                <img src="imagens/images.jpg" alt="logo_ecitcristiano">
+                <img src="imagens/ecit_reduzida.png" alt="logo_ecitcristiano">
             </div>
         </aside>
     </main>
