adicionei os botões dark e clear

--- a/index_dark.html
+++ b/index_dark.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site da ECIT</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_dark.css">
 </head>
 <body>
     <header>
         <h1>ECIT Cristiano Cartaxo</h1>
         <p>2ª Série A | Aluno <a href="https://instagram.com/davioliveira808" rel="external" target="_blank">Davi Oliveira de Sá</a></p>
         <p>Professor <a href="https://instagram.com/professorademirr" rel="external" target="_blank">Ademir Matias</a></p>
-        <div id="dark_box">
-            <a href="index_dark.html" id="dark">Modo Escuro</a>
+        <div id="clear_box">
+            <a href="index.html" id="clear">Modo Claro</a>
         </div>
         <nav>
             <a href="#">Início</a>
