adicionei a página de contatos dark

--- a/index_dark.html
+++ b/index_dark.html
@@ -18,7 +18,7 @@
             <a href="#">Início</a>
             <a href="#">História</a>
             <a href="#">Estrutura</a>
-            <a href="contato.html">Contato</a>
+            <a href="contato_dark.html">Contato</a>
         </nav>
     </header>
     <main>
