criei a base da página de estrutura

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <a href="#">Início</a>
             <a href="#">História</a>
-            <a href="#">Estrutura</a>
+            <a href="estrutura.html">Estrutura</a>
             <a href="contato.html">Contato</a>
         </nav>
     </header>
