terminei o desenvolvimento da versão clara da página "estrutura"

--- a/estrutura.html
+++ b/estrutura.html
@@ -11,7 +11,10 @@
         <h1>Estrutura do Site</h1>
         <p>Esse Site é um projeto desenvolvido para a escola ECIT Cristiano Cartaxo durante as aulas de Desenvolvimento Web do Professor Ademir Matias.</p>
         <p>Todo o projeto foi desenvolvido utilizando as tecnologias HTML5 e CSS3, e está totalmente versionado e hospedado no Github do desenvolvedor.</p>
-        
+        <div id="botao_github">
+            <a href="https://github.com/davioliveira-repo/site_ecit-cristiano-cartaxo" target="_blank" rel="external">Acesse o Repositório do Projeto</a>
+        </div>
+        <p>No momento o site está em desenvolvimento e sujeito a futuras alterações. <br> <br><strong>Qualquer alteração feita será atualizada no repositório do projeto no Github e aplicada ao site em minutos.</strong></p>
     </main>
     <footer>
         <div id="buttom">
