--- a/index_dark.html
+++ b/index_dark.html
@@ -17,7 +17,7 @@
         <nav>
             <a href="#">Início</a>
             <a href="#">História</a>
-            <a href="#">Estrutura</a>
+            <a href="estrutura_dark.html">Estrutura</a>
             <a href="contato_dark.html">Contato</a>
         </nav>
     </header>
