adicionei o botão de voltar para a página inicial

--- a/login.html
+++ b/login.html
@@ -20,5 +20,10 @@
         </div>
         <p><br></p>
     </main>
+    <footer>
+        <div id="buttom">
+            <a href="index.html">Voltar para o menu principal</a>
+        </div>
+    </footer>
 </body>
 </html>
