adicionei as versões dark

--- a/index_dark.html
+++ b/index_dark.html
@@ -20,6 +20,7 @@
             <a href="#">História</a>
             <a href="estrutura_dark.html">Estrutura</a>
             <a href="contato_dark.html">Contato</a>
+            <a href="login_dark.html">Login</a>
         </nav>
     </header>
     <main>
