--- a/login_dark.html
+++ b/login_dark.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_dark.css">
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -23,7 +23,7 @@
     </main>
     <footer>
         <div id="buttom">
-            <a href="index.html">Voltar para o menu principal</a>
+            <a href="index_dark.html">Voltar para o menu principal</a>
         </div>
     </footer>
 </body>
